# claude-meter

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SETUP.md  build-exe.cmd  build.cmd  build.spec  pyproject.toml  requirements-dev.txt  run.cmd
.github/workflows/: ci.yml  release.yml
src/claude_usage_widget/: __init__.py  __main__.py  app.py  claude_logo.py  credentials.py  fullscreen.py  history.py  icons.py  main.py  notifications.py  poller.py  pricing.py  products.py  settings.py  settings_dialog.py  startup.py  theme.py  tooltip.py  tray.py  usage.py  widget.py  win32_glass.py
tests/: test_credentials.py  test_history.py  test_notifications.py  test_pricing.py  test_usage.py
